--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
       <div class="container py-20 mx-auto md:py-10">
         <div class="flex flex-col items-center z-20 md:flex-row">
           <div class="text-center mb-12 md:text-left md:w-1/2 md:pr-10">
-            <h1 class="text-4xl md:text-7xl font-bold leading-[1.2] mb-6">Awesome App for your Financial.</h1>
-            <p class="leading-[1.3] mb-10 text-2xl">This should be used to tell a story and let your users
-              know a little more about app and it's use, How can
-              benefit them
+            <h1 class="text-4xl md:text-7xl font-bold leading-[1.2] mb-6">Awesome App for your Finances.</h1>
+            <p class="leading-[1.3] mb-10 text-2xl">Take control of your money with confidence. Our app makes 
+              managing your finances simple, smart, and stress-free.
             </p>
 
             <button class="btn">Download App</button>
